Cleaned up Azkaban notes